# apprunner

./: app.py  pyproject.toml
apprunner/: main.py
client/: vite.config.ts
client/src/: App.vue
tests/: test_apprunner.py
www/: index.html
www/assets/: index-5435eefe.js
