[tool.poetry]
name = "apprunner"
version = "0.1.0"
description = ""
authors = ["Oscar Bahamonde <107950590+obahamonde@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
